--- a/assets/styles/scss/init.scss
+++ b/assets/styles/scss/init.scss
@@ -11,3 +11,7 @@
 @import 'general/_main';
 
 @import 'general/_helpers';
+
+@import 'fontawesome/scss/fontawesome.scss';
+@import 'fontawesome/scss/brands.scss';
+@import 'fontawesome/scss/solid.scss';
