--- a/assets/styles/scss/config/_fonts.scss
+++ b/assets/styles/scss/config/_fonts.scss
@@ -1,21 +1,21 @@
 @font-face {
     font-family: "CircularStd";
-    src:    url("/fonts/CircularStd-Book.woff") format("woff");
+    src:    url("~static/fonts/CircularStd-Book.woff") format("woff");
     font-weight: 400;
 }
 @font-face {
     font-family: "CircularStd";
-    src:    url("/fonts/CircularStd-Medium.woff") format("woff");
+    src:    url("~static/fonts/CircularStd-Medium.woff") format("woff");
     font-weight: 500;
 }
 @font-face {
     font-family: "CircularStd";
-    src:    url("/fonts/CircularStd-Bold.woff") format("woff");
+    src:    url("~static/fonts/CircularStd-Bold.woff") format("woff");
     font-weight: 600;
 }
 @font-face {
     font-family: "CircularStd";
-    src:    url("/fonts/CircularStd-Black.woff") format("woff");
+    src:    url("~static/fonts/CircularStd-Black.woff") format("woff");
     font-weight: 700;
 }
 
