--- a/assets/styles/scss/general/_main.scss
+++ b/assets/styles/scss/general/_main.scss
@@ -1,239 +1,294 @@
-html, body{
-    font-family: $gfont;
-    margin: 0;
-    color: $apiGreyHeavy!important;
-    
+html,
+body {
+  font-family: $gfont;
+  margin: 0;
+  color: $apiGreyHeavy !important;
+
 }
-header{
-    min-height: 80vh;
-    display: flex;
-    // align-items: center;
-    padding-top: 40vh;
-    padding-bottom: 2vh;
-    background-color: #fcfcfc;
-    h1{
-        font-size: rem(28px);
-        font-weight: $fsemibold;
-    }
-    p{
-        font-size: rem(18px);
-        &.resume{
-            margin-top: 20px;
-        }
-        &.seework{
-            display: inline-block;
-            font-size: rem(18px);
-            margin-top: 20px;
-        }
-    }
-    .readmore{
-        margin-top: 20px;
-        margin-right: 5px;
-    }
-}
-section.selected-work{
-    margin-top: 40px;
-    margin-bottom: 40px;
-    h2{
-        font-size: rem(18px);
-        color: $apiGreyMid;
-        text-transform: uppercase;
-    }
-    .featured-items{
-        margin-top: 20px;
-        display: inline-block;
-        width: auto;
-        .featured-item{
-            margin-bottom: 20px;
-            span.coming{
-                color: $apiGreyMid;
-                margin-left: 5px;
-                font-size: rem(14px);
-                opacity: 0;
-                transform: translateX(-10px);
-                transition: all .2s ease-in-out;
-            }
-            span.content{
-                transition: all .2s ease-in-out;
-            }
-            &:hover{
-                span.coming{
-                    opacity: 1;
-                    transform: translateX(0px);
-                    transition: all .2s ease-in-out;
-                }
-                span.content{
-                    transition: all .2s ease-in-out;
-                }
-            }
-            @include mobile{
-                span.coming{
-                    display: none;
-                }
-            }
-        }
-        a{
-            font-size: rem(40px);
-        }
-    }
-}
-footer{
-    padding: 20px 0 40px;
-    background-color: #fcfcfc;
-    .copyright{
-        color: $apiGreyMid;
-        margin-bottom: 0;
-        font-size: rem(12px);
-        font-weight: $flite;
-        text-align: center;
-    }
-    .contactme{
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        margin-bottom: 10px;
-        a{
-            font-size: rem(20px);
-            margin: 20px;
-            color: $apiGreyMid;
-            transition: color .2s ease-in-out, transform .2s ease-in-out;
-            &:hover {
-              color: $apiGreen;
-              transform: translateY(-3px);
-              transition: color .2s ease-in-out, transform .2s ease-in-out;
-            }
-        }
-        
-    }
-}
-.is-link{
+
+header {
+  min-height: 80vh;
+  display: flex;
+  // align-items: center;
+  padding-top: 40vh;
+  padding-bottom: 2vh;
+  background-color: #fcfcfc;
+
+  h1 {
+    font-size: rem(28px);
+    font-weight: $fsemibold;
+  }
+
+  p {
     font-size: rem(18px);
-    color: $apiGreyHeavy;
-    font-weight: $freg;
-    transition: all .2s ease-in-out;
-    line-height: 1.2;
-    &:hover{
-        color: $apiGreyHeavy;
-        text-decoration: none;
+
+    &.resume {
+      margin-top: 20px;
     }
-    &--green{
-        border-bottom: 1px solid $apiGreen;
-        box-shadow: inset 0 -2px 0 0 $apiGreen;
-        &:hover{
-            box-shadow: inset 0 -10px 0 0 $apiGreen;   
-        }
+
+    &.seework {
+      display: inline-block;
+      font-size: rem(18px);
+      margin-top: 20px;
     }
-    &--lrlv-alt{
-        color: $apiGreyMid;
-        border-bottom: 1px solid $lrlv;
-        box-shadow: inset 0 -2px 0 0 $lrlv;
-        &:hover{
-            box-shadow: inset 0 -10px 0 0 $lrlv;   
-        }
-    }
-    &--alt{
-        span.content{
-            border-bottom: 0px solid $apiGreen;
-            box-shadow: inset 0 0 0 0 $apiGreen;
-        }
-        &:hover{
-            span.content{
-                border-bottom: 1px solid $apiGreen;
-                box-shadow: inset 0 -20px 0 0 $apiGreen;
-            }
-        }
-    }
-    &--lrlv{
-        span.content{
-            border-bottom: 0px solid $lrlv;
-            box-shadow: inset 0 0 0 0 $lrlv;
-        }
-        &:hover{
-            span.content{
-                border-bottom: 1px solid $lrlv;
-                box-shadow: inset 0 -20px 0 0 $lrlv;
-            }
-        }
-    }
-    &--lvdf{
-        span.content{
-            border-bottom: 0px solid $lvdf;
-            box-shadow: inset 0 0 0 0 $lvdf;
-        }
-        &:hover{
-            span.content{
-                border-bottom: 1px solid $lvdf;
-                box-shadow: inset 0 -20px 0 0 $lvdf;
-            }
-        }
-    }
-    &--adnstudio{
-        span.content{
-            border-bottom: 0px solid $adnstudio;
-            box-shadow: inset 0 0 0 0 $adnstudio;
-        }
-        &:hover{
-            span.content{
-                border-bottom: 1px solid $adnstudio;
-                box-shadow: inset 0 -20px 0 0 $adnstudio;
-            }
-        }
-    }
-    &--adnrealty{
-        span.content{
-            border-bottom: 0px solid $adnrealty;
-            box-shadow: inset 0 0 0 0 $adnrealty;
-        }
-        &:hover{
-            span.content{
-                border-bottom: 1px solid $adnrealty;
-                box-shadow: inset 0 -20px 0 0 $adnrealty;
-            }
-        }
-    }
-    &--vorimmo{
-        span.content{
-            border-bottom: 0px solid $vorimmo;
-            box-shadow: inset 0 0 0 0 $vorimmo;
-        }
-        &:hover{
-            span.content{
-                border-bottom: 1px solid $vorimmo;
-                box-shadow: inset 0 -20px 0 0 $vorimmo;
-            }
-        }
-    }
-    &--citydrop{
-        span.content{
-            border-bottom: 0px solid $citydrop;
-            box-shadow: inset 0 0 0 0 $citydrop;
-        }
-        &:hover{
-            span.content{
-                border-bottom: 1px solid $citydrop;
-                box-shadow: inset 0 -20px 0 0 $citydrop;
-            }
-        }
-    }
-    &--bop{
-        span.content{
-            border-bottom: 0px solid $bop;
-            box-shadow: inset 0 0 0 0 $bop;
-        }
-        &:hover{
-            span.content{
-                border-bottom: 1px solid $bop;
-                box-shadow: inset 0 -20px 0 0 $bop;
-            }
-        }
-    }
+  }
+
+  .readmore {
+    margin-top: 20px;
+    margin-right: 5px;
+  }
 }
-.is-green{
-    color: $apiGreen;
-}
-.is-grey-lite{
+
+section.selected-work {
+  margin-top: 40px;
+  margin-bottom: 40px;
+
+  h2 {
+    font-size: rem(18px);
     color: $apiGreyMid;
-    a{
+    text-transform: uppercase;
+  }
+
+  .featured-items {
+    margin-top: 20px;
+    display: inline-block;
+    width: auto;
+
+    .featured-item {
+      margin-bottom: 20px;
+
+      span.coming {
         color: $apiGreyMid;
+        margin-left: 5px;
+        font-size: rem(14px);
+        opacity: 0;
+        transform: translateX(-10px);
+        transition: all .2s ease-in-out;
+      }
+
+      span.content {
+        transition: all .2s ease-in-out;
+      }
+
+      &:hover {
+        span.coming {
+          opacity: 1;
+          transform: translateX(0px);
+          transition: all .2s ease-in-out;
+        }
+
+        span.content {
+          transition: all .2s ease-in-out;
+        }
+      }
+
+      @include mobile {
+        span.coming {
+          display: none;
+        }
+      }
     }
+
+    a {
+      font-size: rem(40px);
+      @include mobile {
+        font-size: rem(30px);
+      }
+    }
+  }
+}
+
+footer {
+  padding: 20px 0 40px;
+  background-color: #fcfcfc;
+
+  .copyright {
+    color: $apiGreyMid;
+    margin-bottom: 0;
+    font-size: rem(12px);
+    font-weight: $flite;
+    text-align: center;
+  }
+
+  .contactme {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+
+    a {
+      font-size: rem(20px);
+      padding: 20px;
+      color: $apiGreyMid;
+      transition: color .2s ease-in-out, transform .2s ease-in-out;
+
+      &:hover {
+        color: $apiGreen;
+        transform: translateY(-3px);
+        transition: color .2s ease-in-out, transform .2s ease-in-out;
+      }
+    }
+
+    @include mobile {
+      a {
+        padding: 15px;
+      }
+    }
+  }
+}
+
+.is-link {
+  font-size: rem(18px);
+  color: $apiGreyHeavy;
+  font-weight: $freg;
+  transition: all .2s ease-in-out;
+  line-height: 1.2;
+
+  &:hover {
+    color: $apiGreyHeavy;
+    text-decoration: none;
+  }
+
+  &--green {
+    border-bottom: 1px solid $apiGreen;
+    box-shadow: inset 0 -2px 0 0 $apiGreen;
+
+    &:hover {
+      box-shadow: inset 0 -10px 0 0 $apiGreen;
+    }
+  }
+
+  &--lrlv-alt {
+    color: $apiGreyMid;
+    border-bottom: 1px solid $lrlv;
+    box-shadow: inset 0 -2px 0 0 $lrlv;
+
+    &:hover {
+      box-shadow: inset 0 -10px 0 0 $lrlv;
+    }
+  }
+
+  &--alt {
+    span.content {
+      border-bottom: 0px solid $apiGreen;
+      box-shadow: inset 0 0 0 0 $apiGreen;
+    }
+
+    &:hover {
+      span.content {
+        border-bottom: 1px solid $apiGreen;
+        box-shadow: inset 0 -20px 0 0 $apiGreen;
+      }
+    }
+  }
+
+  &--lrlv {
+    span.content {
+      border-bottom: 0px solid $lrlv;
+      box-shadow: inset 0 0 0 0 $lrlv;
+    }
+
+    &:hover {
+      span.content {
+        border-bottom: 1px solid $lrlv;
+        box-shadow: inset 0 -20px 0 0 $lrlv;
+      }
+    }
+  }
+
+  &--lvdf {
+    span.content {
+      border-bottom: 0px solid $lvdf;
+      box-shadow: inset 0 0 0 0 $lvdf;
+    }
+
+    &:hover {
+      span.content {
+        border-bottom: 1px solid $lvdf;
+        box-shadow: inset 0 -20px 0 0 $lvdf;
+      }
+    }
+  }
+
+  &--adnstudio {
+    span.content {
+      border-bottom: 0px solid $adnstudio;
+      box-shadow: inset 0 0 0 0 $adnstudio;
+    }
+
+    &:hover {
+      span.content {
+        border-bottom: 1px solid $adnstudio;
+        box-shadow: inset 0 -20px 0 0 $adnstudio;
+      }
+    }
+  }
+
+  &--adnrealty {
+    span.content {
+      border-bottom: 0px solid $adnrealty;
+      box-shadow: inset 0 0 0 0 $adnrealty;
+    }
+
+    &:hover {
+      span.content {
+        border-bottom: 1px solid $adnrealty;
+        box-shadow: inset 0 -20px 0 0 $adnrealty;
+      }
+    }
+  }
+
+  &--vorimmo {
+    span.content {
+      border-bottom: 0px solid $vorimmo;
+      box-shadow: inset 0 0 0 0 $vorimmo;
+    }
+
+    &:hover {
+      span.content {
+        border-bottom: 1px solid $vorimmo;
+        box-shadow: inset 0 -20px 0 0 $vorimmo;
+      }
+    }
+  }
+
+  &--citydrop {
+    span.content {
+      border-bottom: 0px solid $citydrop;
+      box-shadow: inset 0 0 0 0 $citydrop;
+    }
+
+    &:hover {
+      span.content {
+        border-bottom: 1px solid $citydrop;
+        box-shadow: inset 0 -20px 0 0 $citydrop;
+      }
+    }
+  }
+
+  &--bop {
+    span.content {
+      border-bottom: 0px solid $bop;
+      box-shadow: inset 0 0 0 0 $bop;
+    }
+
+    &:hover {
+      span.content {
+        border-bottom: 1px solid $bop;
+        box-shadow: inset 0 -20px 0 0 $bop;
+      }
+    }
+  }
+}
+
+.is-green {
+  color: $apiGreen;
+}
+
+.is-grey-lite {
+  color: $apiGreyMid;
+
+  a {
+    color: $apiGreyMid;
+  }
 }
