--- a/assets/styles/scss/fontawesome/scss/_variables.scss
+++ b/assets/styles/scss/fontawesome/scss/_variables.scss
@@ -1,7 +1,7 @@
 // Variables
 // --------------------------
 
-$fa-font-path:                '~static/fonts/fa' !default;
+$fa-font-path:                '/fonts/fa' !default;
 $fa-font-size-base:           16px !default;
 $fa-font-display:             auto !default;
 $fa-css-prefix:               fa !default;
