refactor: many things | update deps

--- a/assets/styles/scss/config/_colors.scss
+++ b/assets/styles/scss/config/_colors.scss
@@ -16,6 +16,7 @@ $adnrealty: #00b0ff;
 $vorimmo: #3FC0F0;
 $citydrop: #f95c33;
 $bop: #4B0AA2;
+$adlead: #057dff;
 
 /**********************************/
 /**** MELANGE COULEURS PERSOS *****/
